[package]
name = "collam"
version = "0.0.1"
authors = ["Michael Egger <michael.egger@tsn.at>"]
edition = "2018"

[lib]
name = "collam"
crate-type = ["rlib"]

[features]
# Enables debug assertions and trace logs.
# Should only be used during development!
debug = []
# Enables statistics printing.
# Should only be used during development!
stats = []

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = { version = "0.2", default-features = false }
libc-print = "0.1.11"
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false