[package]
name = "posix"
version = "0.0.1"
authors = ["Michael Egger <michael.egger@tsn.at>"]
edition = "2018"

[lib]
name = "collam"
crate-type = ["cdylib"]

[features]
# Enables debug assertions and trace logs.
# Should only be used during development!
debug = []
# Enables statistics printing.
# Should only be used during development!
stats = []

[dependencies]
collam = { path = ".." }
libc = { version = "0.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false